# Applied-Geometry-And-Special-Effects

./: .gitignore  README.md
GMlib/: CMakeLists.txt
GMlib/cmake/: CMakeLists.txt  utils.cmake
GMlib/cmake/common/: CMakeLists.txt  config.cmake.in  config.cmake.in_old  config_version.cmake.in  doxyfile.in  gen_redirect_header.cmake.in  namespace_header.h.in  redirect_header.h.in
GMlib/cmake/modules/: FindACML.cmake  FindAPPML.cmake  FindGlew.cmake  FindMKL.cmake  FindOpenBLAS.cmake  FindOpenCL.cmake  FindViennaCL.cmake
GMlib/doc/: .gitignore  CMakeLists.txt
GMlib/modules/: CMakeLists.txt
GMlib/modules/core/: CMakeLists.txt
GMlib/modules/core/benchmarks/: CMakeLists.txt  array.cc
GMlib/modules/core/src/: CMakeLists.txt  gmglobal.h
GMlib/modules/core/src/blas/: CMakeLists.txt
GMlib/modules/core/src/containers/: CMakeLists.txt  gmarray.c  gmarray.h  gmarraylx.c  gmarraylx.h  gmarrayt.c  gmarrayt.h  gmdmatrix.c  gmdmatrix.h  gmdvector.c  gmdvector.h  gmdvectorn.c  gmdvectorn.h
GMlib/modules/core/src/static/: CMakeLists.txt  gmstaticproc.c  gmstaticproc.h  gmstaticproc2.c  gmstaticproc2.h
GMlib/modules/core/src/types/: CMakeLists.txt  gmangle.h  gmmatrix.c  gmmatrix.h  gmpoint.c  gmpoint.h  gmsimplex.c  gmsimplex.h  gmsubspace.c  gmsubspace.h
GMlib/modules/core/src/utils/: CMakeLists.txt  gmcolor.cpp  gmcolor.h  gmdivideddifferences.c  gmdivideddifferences.h  gmrandom.c  gmrandom.h  gmsortobject.c  gmsortobject.h  gmstream.cpp  gmstream.h  gmstring.c  gmstring.h  gmtimer.c  gmtimer.h  gmutils.h
GMlib/modules/core/tests/: CMakeLists.txt  array.cc  dvectorn.cc  staticproc.cc
GMlib/modules/opencl/: CMakeLists.txt  gmcommandqueue.cpp  gmcommandqueue.h  gmkernel.cpp  gmkernel.h  gmmemory.h  gmopencl.cpp  gmopencl.h  gmprogram.cpp  gmprogram.h  gmsampler.cpp  gmsampler.h
GMlib/modules/opencl/memory/: CMakeLists.txt  gmbuffer.cpp  gmbuffer.h  gmbuffergl.cpp  gmbuffergl.h  gmbufferrendergl.cpp  gmbufferrendergl.h  gmimage2d.cpp  gmimage2d.h  gmimage2dgl.cpp  gmimage2dgl.h  gmimage3d.cpp  gmimage3d.h  gmimage3dgl.cpp  gmimage3dgl.h
GMlib/modules/opengl/: CMakeLists.txt
GMlib/modules/opengl/src/: CMakeLists.txt  gmbufferobject.cpp  gmbufferobject.h  gmframebufferobject.cpp  gmframebufferobject.h  gmglobject.h  gmopengl.h  gmopenglmanager.cpp  gmopenglmanager.h  gmprogram.cpp  gmprogram.h  gmprogrampipeline.cpp  gmprogrampipeline.h  gmrenderbufferobject.cpp  gmrenderbufferobject.h  gmshader.cpp  gmshader.h  gmtexture.cpp  gmtexture.h
GMlib/modules/opengl/src/bufferobjects/: CMakeLists.txt  gmindexbufferobject.cpp  gmindexbufferobject.h  gmtexturebufferobject.cpp  gmtexturebufferobject.h  gmuniformbufferobject.cpp  gmuniformbufferobject.h  gmvertexbufferobject.cpp  gmvertexbufferobject.h
GMlib/modules/opengl/src/shaders/: CMakeLists.txt  gmcomputeshader.cpp  gmcomputeshader.h  gmfragmentshader.cpp  gmfragmentshader.h  gmgeometryshader.cpp  gmgeometryshader.h  gmtesscontrolshader.cpp  gmtesscontrolshader.h  gmtessevaluationshader.cpp  gmtessevaluationshader.h  gmvertexshader.cpp  gmvertexshader.h
GMlib/modules/opengl/src/utils/: CMakeLists.txt  gmutils.h
GMlib/modules/opengl/tests/: CMakeLists.txt  dummy.cc
GMlib/modules/parametrics/: CMakeLists.txt
GMlib/modules/parametrics/src/: CMakeLists.txt  gmparametrics.c  gmparametrics.h  gmparametrics.h.T39876  gmparametrics.h.q22056  gmpcurve.c  gmpcurve.h  gmpsurf.c  gmpsurf.h  gmptriangle.c  gmptriangle.h
GMlib/modules/parametrics/src/curves/: CMakeLists.txt  gmparc.c  gmparc.h  gmpbasiscurve.c  gmpbasiscurve.h  gmpbeziercurve.c  gmpbeziercurve.h  gmpbsplinebasiscurve.c  gmpbsplinebasiscurve.h  gmpbsplinecurve.c  gmpbsplinecurve.c.C36748  gmpbsplinecurve.c.E36940  gmpbsplinecurve.c.S36520  gmpbsplinecurve.c.X27296  gmpbutterfly.c  (+31 more)
GMlib/modules/scene/: CMakeLists.txt
GMlib/modules/scene/src/: CMakeLists.txt  gmscaleobject.h  gmscene.cpp  gmscene.h  gmsceneobject.cpp  gmsceneobject.h  gmvisualizer.cpp  gmvisualizer.h
GMlib/modules/scene/tests/: CMakeLists.txt  sceneobject.cc
GMlib/modules/script/: CMakeLists.txt  gmscript.cpp  gmscript.h
GMlib/modules/script/parametrics/: CMakeLists.txt  gmpluascriptcurve.c  gmpluascriptcurve.h  gmpluascriptsurf.c  gmpluascriptsurf.h
GMlib/modules/script/scripts/: pcircle_eval.lua  psphere_eval.lua
GMlib/modules/stereolithography/: CMakeLists.txt
GMlib/modules/stereolithography/src/: CMakeLists.txt  gmstlobject.cpp  gmstlobject.h
GMlib/modules/testutils/: CMakeLists.txt  gmtestutils.h
GMlib/modules/trianglesystem/: CMakeLists.txt
GMlib/modules/trianglesystem/src/: CMakeLists.txt  gmtrianglesystem.c  gmtrianglesystem.h
GMlib/modules/wavelet/: CMakeLists.txt  gmdwt.c  gmdwt.h  gmfilter.c  gmfilter.h  gmindex.h  gmorthofilter.c  gmorthofilter.h
GMlib/modules/wavelet/filters/: CMakeLists.txt  gmfilterfactory.c  gmfilterfactory.h
GMlib/resources/doxygen/: DoxyfileDevAPI  DoxyfileUsrAPI
GMlib/resources/doxygen/trac/: header.html
GMlib/resources/licensing/: license_template
SpecialEffects/: CMakeLists.txt  defaultsplinecurve.cpp  defaultsplinecurve.h  mybsplinecurve.cpp  mybsplinecurve.h  scenario.cpp  scenario.h
SpecialEffects/application/: application.qrc  fboinsgrenderer.cpp  fboinsgrenderer.h  gmlibwrapper.cpp  gmlibwrapper.h  gmlibwrapper.h.H29468  guiapplication.cpp  guiapplication.h  main.cpp  utils.h  window.cpp  window.h
SpecialEffects/application/qml/: main.qml
SpecialEffects/application/qml/components/: HidBindingView.qml  TextureViewer.qml
SpecialEffects/downeyeffects/: blendingcurve.c  blendingcurve.h  bsplinecurve.c  bsplinecurve.h  gerbs.c  gerbs.h  gerbscurve.c  gerbscurve.h  gerbssurf.c  gerbssurf.h  modelcurve.c  modelcurve.h  simplesubsurf.c  simplesubsurf.h
SpecialEffects/hidmanager/: CMakeLists.txt  defaulthidmanager.cpp  defaulthidmanager.h  hidaction.cpp  hidaction.h  hidbinding.cpp  hidbinding.h  hidinput.cpp  hidinput.h  hidinputevent.cpp  hidinputevent.h  hidkbmouseinput.cpp  hidkbmouseinput.h  hidmanager.cpp  hidmanager.h  hidmanagertreemodel.cpp  hidmanagertreemodel.h  standardhidmanager.cpp  standardhidmanager.h
(+264 files in other folders)
